--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 
 				if (clave1 != clave2) {
 					alert("Las contraseñas no coinciden. Por favor, verifica.");
-					return false;
+					return false; // Evitar que el formulario se envíe
 				}
-
 				return true;
 			}
 		</script>
