--- a/work.html
+++ b/work.html
@@ -88,25 +88,9 @@
 							<li><a href="about.html">Sobre nosotros</a></li>
 							<li class="has-dropdown">
 								<a href="services.html">Services</a>
-								<!--
-									<ul class="dropdown">
-										<li><a href="#">Servicio 1</a></li>
-										<li><a href="#">Servicio 2</a></li>
-										<li><a href="#">Servicio 3</a></li>
-										<li><a href="#">Servicio 4</a></li>
-									</ul>
-								-->
 							</li>
 							<li class="has-dropdown">
 								<a href="programas.html">Programas para empresas</a>
-								<!--
-									<ul class="dropdown">
-										<li><a href="#">HTML5</a></li>
-										<li><a href="#">CSS3</a></li>
-										<li><a href="#">Sass</a></li>
-										<li><a href="#">jQuery</a></li>
-									</ul>
-								-->
 							</li>
 							<li class="active"><a href="work.html">Empresas colaboradoras</a></li>
 							<li><a href="contact.html">Contacto</a></li>
@@ -268,11 +252,11 @@
 								</div>
 								<div class="form-group">
 									<label for="exampleInputName">Dirección</label>
-									<input type="name" class="form-control" name="direccion" id="direccion1" placeholder="Nombre" required>
+									<input type="name" class="form-control" name="direccion" id="direccion1" placeholder="Dirección" required>
 								</div>
 								<div class="form-group">
 									<label for="exampleInputName">Teléfono</label>
-									<input type="name" class="form-control" name="numtel" id="numtel1" placeholder="Nombre" required>
+									<input type="name" class="form-control" name="numtel" id="numtel1" placeholder="Teléfono" required>
 								</div>
 								<div class="form-group">
 									<label for="exampleInputEmail1">Correo </label>
